@@ -76,6 +76,7 @@ struct XGGeneric {
   long			currentFocusWindow;
   long			desiredFocusWindow;
   unsigned long		focusRequestNumber;
+  unsigned long         desiredOrderedWindow;
   unsigned char		lMouse;
   unsigned char		mMouse;
   unsigned char		rMouse;
